--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 header {
+	padding-left:15px;
 	background-color: #333333;
 	color: #eee;
 }
@@ -36,6 +37,7 @@ h2 {
 }
 
 #contact-info a {
+	line-height: 1.5;
 	color: #d21034;
 }
 
